k8sapps/k8s-cluster-deploy/https_ingress_deploy/tls_nginx_ingress_deploy.yaml
# Create at 2020-11-04, build tls nginx ingress env.
#
# host name "zj.ssltest.com" is matched from tls.crt.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testingress-tls
  namespace: k8s-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - zj.ssltest.com
    secretName: testsecret-tls
  rules:
  - host: zj.ssltest.com
    http:
      paths:
      - path: /
        backend:
          serviceName: testnginx-svc
          servicePort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: testnginx-svc
  namespace: k8s-test
spec:
  selector:
    app: nginx
    release: canary
  type: ClusterIP # NodePort
  ports:
  - name: http
    targetPort: 80
    port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: testnginx-deploy
  namespace: k8s-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      release: canary
  template:
    metadata:
      labels:
        app: nginx
        release: canary
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.3-alpine
        ports:
        - name: http
          containerPort: 80
